Bug 47670 - FILESAVE: HTML Export not showing table borders when using vertical OR horizontal lines in table
Summary: FILESAVE: HTML Export not showing table borders when using vertical OR horizo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: x86 (IA32) Windows (All)
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:3.6.0 target:3.5.4
Keywords: regression
Depends on:
Blocks: 44768
  Show dependency treegraph
 
Reported: 2012-03-21 11:08 UTC by hitec_tsc
Modified: 2012-05-01 05:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
ODT for HTML export (9.14 KB, application/vnd.oasis.opendocument.text)
2012-03-21 11:08 UTC, hitec_tsc
Details
Exported HTML file (14.76 KB, text/html)
2012-03-21 11:09 UTC, hitec_tsc
Details
Screenshot of exported HTML file view (3.97 KB, image/png)
2012-03-21 11:10 UTC, hitec_tsc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hitec_tsc 2012-03-21 11:08:05 UTC
Created attachment 58828 [details]
ODT for HTML export

When exporting an ODT file with tables (see attached example) to HTML by using File -> Save as... -> HTML document (OpenOffice.org Writer) the exported HTML file has its outer table borders set to none or 0px or something like that if the table has only vertical OR horizontal lines in its grid.

Steps to reproduce:

1) Open attached TableExportExample.odt
2) Click File -> Save as...
3) Select HTML document from the dropdown list
4) Save
5) Open exported HTML file in Mozilla Firefox (MS Internet Explorer is not interpreting the tables correctly, hence showing the borders incorrectly)
6) Compare HTML view to ODT view
Comment 1 hitec_tsc 2012-03-21 11:09:03 UTC
Created attachment 58829 [details]
Exported HTML file
Comment 2 hitec_tsc 2012-03-21 11:10:11 UTC
Created attachment 58830 [details]
Screenshot of exported HTML file view
Comment 3 hitec_tsc 2012-03-22 03:16:05 UTC
This is also reproducable in LibO 3.4.5 & 3.4.6 for me.
Comment 4 s-joyemusequna 2012-03-22 12:20:11 UTC
Confirmed with LibO 3.3.4, 3.4.5, and 3.5.2 RC1 on Windows XP / Vista 64 (same error).

Works fine with OpenOffice.org 3.1 => REGRESSION
Comment 5 Michael Stahl 2012-04-30 12:32:15 UTC
so this is another regression from d18feffd49f4481626417daac7984b2a7e70c3bf,
which changed sw/source/filter/html/htmltabw.cxx to no longer write
BORDER and BORDERCOLOR attributes on TABLE elements, but instead
various CSS "border" properties into STYLE attributes of the TD elements.

the problem is that there is still a "RULES=ROWS" (in case of first table)
or "RULES=COLS" (in case of last table) attribute on the TABLE element,
which causes Mozilla (FF11) to draw _only_ the horizontal (resp. vertical)
borders (but strangely the WebKit based Epiphany draws all borders).

fixed that now on master.
Comment 6 Not Assigned 2012-04-30 12:34:40 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1424390d45deb75a75a167e7eba36c012f32d74

fdo#47670: sw: HTML: fix table border export:
Comment 7 Not Assigned 2012-05-01 05:29:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b16cce86e7acebbe485fadb989687a55605453e0&g=libreoffice-3-5

fdo#47670: sw: HTML: fix table border export:


It will be available in LibreOffice 3.5.4.