fdo#47670: sw: HTML: fix table border export:

SwHTMLWrtTable::Write no longer writes BORDER and BORDERCOLOR attributes
on TABLE elements, but instead various CSS "border" properties into STYLE
attributes of the TD elements.  However, it was forgotten to also remove
the ROWS and FRAMES attributes, which (as the comments helpfully explain)
only make sense in case BORDER is actually written, and cause Mozilla to
not render some of the borders in cases RULES=ROWS or RULES=COLS.
(regression from d18feffd49f4481626417daac7984b2a7e70c3bf)
(cherry picked from commit e1424390d45deb75a75a167e7eba36c012f32d74)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>